[gd_scene load_steps=3 format=3 uid="uid://dnos4idmp16j6"]

[ext_resource type="Script" path="res://Scenes/Stages/level.gd" id="1_wevjo"]
[ext_resource type="PackedScene" uid="uid://pac5p1e37y0o" path="res://Scenes/player.tscn" id="3_nsncn"]

[node name="Level" type="Node2D"]
script = ExtResource("1_wevjo")

[node name="Barriers" type="Node2D" parent="."]

[node name="YSortingLayer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="YSortingLayer" instance=ExtResource("3_nsncn")]
position = Vector2(327, 211)

[node name="Camera2D" type="Camera2D" parent="YSortingLayer/Player"]
position = Vector2(-7, -31)
limit_left = -50
limit_top = 0
limit_bottom = 0
position_smoothing_speed = 20.0

[node name="Projectiles" type="Node2D" parent="YSortingLayer"]

[connection signal="send_sprite" from="." to="YSortingLayer/Player" method="_on_level_send_sprite"]
[connection signal="toss_object" from="YSortingLayer/Player" to="." method="_on_player_toss_object"]
